--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/lri_rftg"
+        android:label="LRI_RFTG"
+        android:roundIcon="@mipmap/lri_rftg_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Applicationrftg"
         android:networkSecurityConfig="@xml/network_security_config"
